--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cra",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yuriyfomin17.github.io/to-do-list",
+  "homepage": "https://yuriyfomin17.github.io/to-do-list-draggable",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
